# SAGED-Bias

./: .coverage  .coverage.192.168.1.188.57757.XEebRsHx  .gitignore  CHANGELOG.md  PKG-INFO  README.md  __init__.py  check_status.py  create_benchmark.py  environment.yml  generations  package-lock.json  pyproject.toml  requirements.txt  run_tests.py  settings.yaml  setup.py  setup_dev.ps1  setup_dev.sh  start_full_app.py  start_simplified_app.py  test_build_benchmark.py
.github/workflows/: ci.yml
MPE/: main.tex  references.bib
MPE/sections/: conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex
MPF_icml/: main.bbl  main.tex  references.bib
MPF_icml/sections/: experiments.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
app/: __init__.py
app/backend/: README.md  database.py  dependencies.py  main.py
app/backend/models/: __init__.py  benchmark.py  experiment.py  results.py  user.py
app/backend/routers/: analysis.py  benchmarks.py  data.py  experiments.py  saged.py
app/backend/schemas/: __init__.py  benchmark.py  experiment.py  results.py
app/backend/services/: __init__.py  experiment_service.py  saged_service.py
app/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
app/frontend/src/: App.tsx
app/frontend/src/components/: Layout.tsx
app/frontend/src/components/ui/: use-toast.tsx
app/frontend/src/pages/: Analysis.tsx  Benchmarks.tsx  Dashboard.tsx  Experiments.tsx  QuickAnalysis.tsx  QuickAnalysisComparison.tsx
app_simplified/: setup.py
app_simplified/backend/: __init__.py  database.py  main.py  requirements.txt  start_backend.bat
app_simplified/backend/models/: __init__.py  benchmark.py
app_simplified/backend/routers/: __init__.py  benchmark.py  database.py  files.py
app_simplified/backend/schemas/: __init__.py  build_config.py
app_simplified/backend/services/: __init__.py  database_service.py  file_service.py  model_service.py  saged_service.py
app_simplified/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app_simplified/frontend/src/: App.tsx
app_simplified/frontend/src/components/: BenchmarkResults.tsx  Navigation.tsx  build_forms.tsx  build_forms_v2.tsx
app_simplified/frontend/src/components/build_forms/: DomainConfig.tsx  FormValidator.tsx  KeywordFinderConfig.tsx  KeywordReplacementPair.tsx  PromptAssemblerBranching.tsx  PromptAssemblerConfig.tsx  SourceFinderConfig.tsx  SourceSelection.tsx
app_simplified/frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  concept-list.tsx  concept-selector.tsx  data-table.tsx  file-upload-list.tsx  form-card.tsx  form-field.tsx  form-switch.tsx  input.tsx  label.tsx  (+4 more)
app_simplified/frontend/src/config/: api.ts
app_simplified/frontend/src/hooks/: useApi.ts
app_simplified/frontend/src/pages/: BenchmarkConfig.tsx  BenchmarkV2.tsx  Home.tsx  MetadataRepository.tsx
app_simplified/frontend/src/services/: auth.ts
app_simplified/frontend/src/types/: benchmark.ts  index.ts  saged_config.ts
app_simplified/frontend/src/utils/: api.ts
doc/: source_processing_flow.md
examples/llm_integrations/: assistants.py
results/run_20250517_135810/: optimized_weights_wasserstein_weighted_a0.5_b0.8_20250517_135812.json
saged/: README.md  __init__.py  _assembler.py  _database.py  _diagnoser.py  _extractor.py  _generator.py  _mitigator.py  _mpf_pipeline.py  _pipeline.py  _plotter.py  _report.py  _saged_data.py  _scrape.py  _utility.py
saged/mpf/: LLMFactory.py  __init__.py  _extractor.py  _generator.py  _mitigator.py  _mpf_pipeline.py  _plotter.py  _report.py  constantpath.py  create_benchmark.py  plot_sentiment.py  run_university_mitigation.py  temp_sentiment.py  validate.py  xnation.txt
scripts/: cleanup.py
tests/: README.md  conftest.py  test_saged_data.py  test_scrape.py  test_utility.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_assembler.py  test_diagnoser.py  test_extractor.py  test_generator.py  test_mitigator.py  test_pipeline.py  test_plotter.py  test_report.py  test_saged_data.py  test_utility.py
tutorials/: README.md  SAGED_Benchmark_building_Tutorial.ipynb  SAGED_benchmark_running_tutorial.ipynb  Scrapping.ipynb
tutorials/.ipynb_checkpoints/: Extra_Scraping_Biased_Data-Copy1-checkpoint.ipynb  Saged_demo-checkpoint.ipynb
xnation/: LLMFactory.py  __init__.py  _generator.py  _mitigator.py  _mpf_pipeline.py  _ploter.py  _plotter.py  _report.py  bias_report_generation.py  constantpath.py  create_benchmark.py  extract_sentiment.py  plot_sentiment.py  run_pipeline.py  run_university_mitigation.py  validate.py  xnation.txt
